# URSI_2020

./: README.md
Software_simplex/: BPSK_software_simplex.grc  BPSK_software_simplex.py  PSK8_software_simplex.grc  PSK8_software_simplex.py  QAM16_software_simplex.grc  QAM16_software_simplex.py  QAM64_software_simplex.grc  QAM64_software_simplex.py  QPSK_software_simplex.grc  QPSK_software_simplex.py
USRP_simplex/: BPSK_USRP_TX_RX.grc  BPSK_USRP_TX_RX.py  PSK8_USRP_TX_RX.grc  PSK8_USRP_TX_RX.py  QAM16_USRP_TX_RX.grc  QAM16_USRP_TX_RX.py  QAM256_USRP_TX_RX.grc  QAM256_USRP_TX_RX.py  QAM64_USRP_TX_RX.grc  QAM64_USRP_TX_RX.py  QPSK_USRP_TX_RX.grc  QPSK_USRP_TX_RX.py
gr-TFMv5/: CMakeLists.txt  MANIFEST.md  cmake_uninstall.cmake
gr-TFMv5/apps/: CMakeLists.txt
gr-TFMv5/docs/: CMakeLists.txt  README.TFMv5
gr-TFMv5/grc/: CMakeLists.txt  TFMv5_crc32_check.block.yml  TFMv5_dispersion_probe.block.yml  TFMv5_energy_scale.block.yml  TFMv5_header_format_counter_dif.block.yml  TFMv5_header_payload_demux_am.block.yml  (+2 more)
gr-TFMv5/python/bindings/: CMakeLists.txt  crc32_check_python.cc  dispersion_probe_python.cc  energy_scale_python.cc  failed_conversions.txt  header_format_counter_dif_python.cc  header_payload_demux_am_python.cc  per_probe_python.cc  python_bindings.cc  tx_controller_python.cc
gr-TFMv5/python/bindings/docstrings/: crc32_check_pydoc_template.h  dispersion_probe_pydoc_template.h  energy_scale_pydoc_template.h  header_format_counter_dif_pydoc_template.h  header_payload_demux_am_pydoc_template.h  per_probe_pydoc_template.h  tx_controller_pydoc_template.h
(+44 files in other folders)
